parse triggers